--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,9 @@
       <strong>We're sorry but hello-world doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="book-widget-root"></div>
+    <script>
+      window.__BOOK_AWARD_TASKS__ = [9303, 9304];
+    </script>
     <!-- built files will be auto injected -->
   </body>
 </html>
